WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
311649
[GLIB] Follow-up icon database fix after
310242@main
https://bugs.webkit.org/show_bug.cgi?id=311649
Summary
[GLIB] Follow-up icon database fix after 310242@main
Claudio Saavedra
Reported
2026-04-07 06:40:58 PDT
.
Attachments
Add attachment
proposed patch, testcase, etc.
Claudio Saavedra
Comment 1
2026-04-07 06:44:21 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/62196
EWS
Comment 2
2026-04-07 08:43:27 PDT
Committed
310708@main
(c7d317933e01): <
https://commits.webkit.org/310708@main
> Reviewed commits have been landed. Closing PR #62196 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug