[GLIB] Follow-up icon database fix after 310242@main https://bugs.webkit.org/show_bug.cgi?id=311649

Reviewed by Adrian Perez de Castro.

Ensure that IconDatabase references are never destroyed from a
worker thread by moving them back to the main loop. This is
needed as the icon database can only be destroyed from the main loop.

Drive-by, remove a seemingly unneeded worker thread lambda for the case
when there is no access to the database, as this is not accessed, there
is no need for it.

* Source/WebKit/UIProcess/API/glib/IconDatabase.cpp:
(WebKit::IconDatabase::checkIconURLAndSetPageURLIfNeeded):
(WebKit::IconDatabase::setIconForPageURL):
(WebKit::IconDatabase::clear):

Canonical link: https://commits.webkit.org/310708@main